--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -1,9 +1,9 @@
 name: Remove old artifacts
 
 on:
-    push:
-        branches: 
-            - main 
+    #push:
+    #    branches: 
+    #        - main 
     #schedule:
     # Every day at 1am
     #- cron: '0 1 * * *'
